Finished implementing PTW state transitions
Finished implementing PTW state transitions

Cleaning top module

Fixed XLEN, PLEN usage

Fixed XLEN and PLEN usage. .gitignore modified

Fix state oscillation issue between IDLE and VALIDATE_ADDRESS in state machine

MPT walker implementation

MPT walker implementation

Virtual memory integration

Finished implementing PTW state transitions

MPTL1 entry struct modified

Add MPT test case generator

Quick fix to mpt_pkg and 32_bit implementation

Quick fix to check_result.py

Separate 32-bit and 64-bit packages

Better separation between 32-bit and 64-bit architecture

Code refactoring

Quick fix to mpt_pkg

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -1,34 +1,23 @@
-
-
-
-#Variables
+# Variables
 VERILATOR_FILE = /usr/share/verilator/include
 VLTSTD = /usr/share/verilator/include/vltstd/
-TOP_MODULE = mtt_top
+
+# Targets for building simulation
+.PHONY: run build verilate wave clean
+
+# Set architecture-dependent variables based on environment variable ARCH
+TOP_MODULE = mpt_top
+PKG_FILE = $(RTL_DIR)/mpt_pkg.sv
 
 TESTBENCH = tb_verilator/$(TOP_MODULE)_tb
-OLDTESTBENCH = tb_verilator/$(OLDTOP_MODULE)_tb
-
 SIM_SRC = $(wildcard $(SIM_SRC_DIR)/*.cpp)
-
 TRACE_DIR = waves
 
-# Use this envvar to include sv headers (if any)
+# Include sv headers (if any)
 VINCLUDE = -I$(RTL_DIR)
-# Filename for the top module
-TOP_MODULE = mtt_top
 
 # Disable warnings
-WARNINGSBYPASS = -Wno-UNUSED \
-#-Wno-PINCONNECTEMPTY \
-#-Wno-SYNCASYNCNET \
-#-Wno-IMPORTSTAR \
-#-Wno-MODDUP \
-#-Wno-VARHIDDEN \
-#-Wno-WIDTH \
-#-Wno-LITENDIAN 	
-#-Wno-UNOPTFLAT \
-#-Wno-UNDRIVEN
+WARNINGSBYPASS = -Wno-UNUSED 
 
 ###########
 # Targets #
@@ -42,12 +31,15 @@ run: build
 build: verilate
 	$(CC) \
 	-I $(VERILATOR_FILE) -I $(VLTSTD) -I $(SIM_DIR)/obj_dir -I $(SIM_SRC_DIR) \
+	-DARCH_$(ARCH) \
 	$(VERILATOR_FILE)/verilated.cpp $(VERILATOR_FILE)/verilated_vcd_c.cpp $(SIM_SRC) $(SIM_DIR)/obj_dir/V$(TOP_MODULE)__ALL.a \
 	-o $(TOP_MODULE).elf
 
+
 # Build Verilator
 verilate:
-	$(VERILATOR) -Wall $(WARNINGSBYPASS) --top-module $(TOP_MODULE) --trace -cc $(RTL_DIR)/mpt_pkg.sv $(RTL_DIR)/$(TOP_MODULE).sv $(VINCLUDE);
+	$(VERILATOR) -Wall $(WARNINGSBYPASS) --top-module $(TOP_MODULE) --trace -cc $(PKG_FILE) $(RTL_DIR)/$(TOP_MODULE).sv $(VINCLUDE) \
+	-DAXI_DATA_WIDTH=$(AXI_DATA_WIDTH) -DAXI_ADDR_WIDTH=$(AXI_ADDR_WIDTH) +define+ARCH_$(ARCH)
 	cd $(SIM_DIR)/obj_dir; make -f V$(TOP_MODULE).mk
 
 # Generate Waves
@@ -59,3 +51,6 @@ clean:
 	rm -r $(SIM_DIR)/obj_dir
 	rm $(TOP_MODULE).elf
 	rm $(SIM_WAVES_DIR)/trace.vcd
+	rm simulation_output_rv32.csv
+	rm simulation_output_rv64.csv
+	rm test_cases_results_rv64.csv
