--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@
 
 # Verilator
 *.vcd
+
+# Build artifacts
+simulation/obj_dir/
+simulation/waves/*
+simulation/logfile
+
+# VS Code settings
+.vscode/
