[Feature] Support Control Unit [Feature] Add support for new control and status bus in pipelining.svh [Feature] Add support for new control and status bus in pipe registers

--- a/simulation/mptw_top/Makefile
+++ b/simulation/mptw_top/Makefile
@@ -22,7 +22,7 @@ SIM_WAVES_DIR = ${SIM_PROJECT_ROOT}/waves
 VINCLUDE = -I${RTL_DIR} -I${HEADERS_DIR}
 
 # Disable warnings
-WARNINGSBYPASS = -Wno-UNUSED -Wno-SYNCASYNCNET
+WARNINGSBYPASS = -Wno-UNUSED -Wno-SYNCASYNCNET -Wno-PINMISSING
 
 ###########
 # Targets #
